@@ -1,6 +1,8 @@
 2015-07-12  Benno Schulenberg  <bensberg@justemail.net>
 	* src/text.c (do_int_spell_fix, do_alt_speller): Remove the variable
 	'added_magicline', as it will always be FALSE and thus does nothing.
+	* src/text.c (do_alt_speller): Rename the variable 'totsize_save' to
+	'size_of_surrounding', to better describe what it contains.
 
 2015-07-10  Benno Schulenberg  <bensberg@justemail.net>
 	* src/nano.c (delete_opennode): Plug a small memory leak.
